; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-data.c_do_delete_items_list.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-data.c_do_delete_items_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_itemid_entry = type { %struct.list_itemid_entry*, i32 }

@.str = private unnamed_addr constant [23 x i8] c"%d items was deleted.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_delete_items_list(%struct.list_itemid_entry* %0) #0 {
  %2 = alloca %struct.list_itemid_entry*, align 8
  %3 = alloca %struct.list_itemid_entry*, align 8
  %4 = alloca i32, align 4
  store %struct.list_itemid_entry* %0, %struct.list_itemid_entry** %2, align 8
  store i32 0, i32* %4, align 4
  %5 = load %struct.list_itemid_entry*, %struct.list_itemid_entry** %2, align 8
  store %struct.list_itemid_entry* %5, %struct.list_itemid_entry** %3, align 8
  br label %6

6:                                                ; preds = %25, %1
  %7 = load %struct.list_itemid_entry*, %struct.list_itemid_entry** %3, align 8
  %8 = icmp ne %struct.list_itemid_entry* %7, null
  br i1 %8, label %9, label %27

9:                                                ; preds = %6
  %10 = load %struct.list_itemid_entry*, %struct.list_itemid_entry** %3, align 8
  %11 = getelementptr inbounds %struct.list_itemid_entry, %struct.list_itemid_entry* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = call i64 @do_delete_item(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %9
  %16 = load i32, i32* %4, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %4, align 4
  %18 = call i32 (...) @flushing_binlog_check()
  br label %19

19:                                               ; preds = %15, %9
  %20 = load %struct.list_itemid_entry*, %struct.list_itemid_entry** %3, align 8
  %21 = getelementptr inbounds %struct.list_itemid_entry, %struct.list_itemid_entry* %20, i32 0, i32 0
  %22 = load %struct.list_itemid_entry*, %struct.list_itemid_entry** %21, align 8
  store %struct.list_itemid_entry* %22, %struct.list_itemid_entry** %2, align 8
  %23 = load %struct.list_itemid_entry*, %struct.list_itemid_entry** %3, align 8
  %24 = call i32 @zfree(%struct.list_itemid_entry* %23, i32 16)
  br label %25

25:                                               ; preds = %19
  %26 = load %struct.list_itemid_entry*, %struct.list_itemid_entry** %2, align 8
  store %struct.list_itemid_entry* %26, %struct.list_itemid_entry** %3, align 8
  br label %6

27:                                               ; preds = %6
  %28 = load i32, i32* %4, align 4
  %29 = call i32 @vkprintf(i32 1, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %28)
  %30 = call i32 (...) @free_all_list_decoders()
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i64 @do_delete_item(i32) #1

declare dso_local i32 @flushing_binlog_check(...) #1

declare dso_local i32 @zfree(%struct.list_itemid_entry*, i32) #1

declare dso_local i32 @vkprintf(i32, i8*, i32) #1

declare dso_local i32 @free_all_list_decoders(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
